# auto-label-from-video

./: .gitignore  README.md  config.yaml  pyproject.toml
src/: app.py  auto_label.py  extract_frames.py  label.py  view_PETA.py
src/static/: index.html
